test/tests/bad/conflicting-var-def_0.carth
;; ConflictingVarDef

(defvar foo +)
(defvar foo -)
